# advent-of-code

./: main.py  pyproject.toml
solutions/: __init__.py  y2023d1.py
static/css/: output.css
templates/: index.html
templates/partials/: input_form.html
