[tool.poetry]
name = "py-aoc"
version = "0.1.0"
description = ""
authors = ["James Curtis <mybastion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
jinja2 = "^3.1.3"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
